@@ -23,6 +23,14 @@
         <jvm.enable-preview>--enable-preview</jvm.enable-preview>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+        </dependency>
+    </dependencies>
+
     <!-- 构建管理 -->
     <build>
         <plugins>
@@ -30,10 +38,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>
-                        <arg>-Xlint:preview</arg>
+                    <compilerArgs>--enable-preview
                         <arg>-Xlint:unchecked,deprecation</arg>
                     </compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
